# Nano-Storyboard

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml
backend/src/: pydantic_models.py  shared.py
backend/src/project/: character.py  panel.py  prompt_service.py  storyboard_project.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/sections/: CharacterCreationStage.tsx  CharacterSection.tsx  PanelCreationStage.tsx  PanelDescriptionSection.tsx  ProjectSection.tsx  ProjectsListView.tsx  StoryboardView.tsx
frontend/src/components/ui/: FormField.tsx  SectionFrame.tsx  styles.ts
frontend/src/editor_page/: editor-page.tsx
frontend/src/project_page/: project-page.tsx
frontend/src/types/: storyboard.ts
frontend/src/utils/: createId.ts
